# SelecaoFESF-SUS

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/routes/: auth.py  dentists.py  patients.py
backend/app/core/: cache.py  cache_utils.py  config.py  dependencies.py  exceptions.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  appointment.py  schedule_slot.py  user.py
backend/app/schemas/: appointment.py  auth.py  schedule.py
backend/app/services/: appointment_service.py  schedule_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_flow.py
backend/tests/unit/: test_services.py
docs/: README.md
frontend/: .dockerignore  .npmrc  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: login-actions.ts  page.tsx
frontend/app/odontologo/: page.tsx
frontend/app/paciente/: page.tsx
frontend/app/register/: page.tsx  register-actions.ts
frontend/components/: AppHeader.tsx  ToastContainer.tsx
frontend/components/ui/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Select.tsx  (+1 more)
frontend/hooks/: useToast.ts
frontend/lib/: api.ts
frontend/store/: auth.ts  dentist.ts  patient.ts  toast.ts
frontend/tests/: auth-store.test.ts  login-actions.test.ts  register-actions.test.ts
frontend/types/: models.ts
