[project]
name = "odonto-backend"
version = "0.1.0"
description = "Backend FastAPI para sistema de agendamento odontologico"
requires-python = ">=3.12,<3.14"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi==0.111.1",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.31",
    "uvicorn[standard]==0.30.3",
]

[dependency-groups]
dev = [
    "httpx==0.27.0",
    "pytest==8.3.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]